# uppaal-libs

./: .clang-format  .gitignore  CMakeLists.txt  README.md  cmake-darwin.sh  cmake-linux.sh  cmake-linux64-debug.sh  cmake-linux64.sh  compile.bat  compile.sh  csvtable.hpp  errors.cpp  errors.hpp  library.hpp  table.cpp  table.xml  table_input.csv  test_table.cpp
.github/workflows/: build.yml  release.yml  release_create.yml  release_upload.yml
cmake/: doctest.cmake  sanitizers.cmake  stdcpp.cmake
src/: CMakeLists.txt  csvtable.hpp  dynlib.h  errors.cpp  errors.hpp  library.hpp  table.cpp  test_errors.cpp  test_table.cpp
toolchain/: i686-w64-mingw32.cmake  linux32-gcc10.cmake  linux32-gcc11.cmake  linux32-gcc12.cmake  linux32-gcc13.cmake  linux64-gcc10.cmake  linux64-gcc11.cmake  linux64-gcc12.cmake  linux64-gcc13.cmake  macos64-brew-gcc10.cmake  macos64-brew-gcc11.cmake  macos64-brew-gcc12.cmake  macos64-brew-gcc13.cmake  macos64-ports-gcc10.cmake  macos64-ports-gcc11.cmake  macos64-ports-gcc12.cmake  macos64.cmake  x86_64-w64-mingw32.cmake
